force-app/main/default/objects/GTM_Instrument_Question__c/GTM_Instrument_Question__c.object-meta.xml
<CustomObject>
    <label>GTM Instrument Question</label>
    <pluralLabel>GTM Instrument Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <type>AutoNumber</type>
        <label>Question Number</label>
        <displayFormat>IQ-{0000}</displayFormat>
    </nameField>
</CustomObject>