force-app/main/default/objects/GTM_Instrument_Question__c/fields/GTM_Instrument__c.field-meta.xml
<CustomField>
    <fullName>GTM_Instrument__c</fullName>
    <label>GTM Instrument</label>
    <description>The parent instrument this question belongs to.</description>
    <referenceTo>GTM_Instrument__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>