force-app/main/default/objects/GTM_Instrument_Question__c/fields/Options_JSON__c.field-meta.xml
<CustomField>
    <fullName>Options_JSON__c</fullName>
    <label>Options JSON</label>
    <description>JSON array of this question's answer options, each shaped as {label, value, points} -- see docs/architecture/gtm-instrument-editor.md for the full contract consumed by sub-issue 02 (Apex) and sub-issue 04 (gtmInstrumentAuthor LWC).</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>