force-app/main/default/objects/GTM_Instrument_Question__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <label>Question Text</label>
    <description>The prompt text shown to the guest for this question.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>