force-app/main/default/objects/GTM_Instrument_Question__c/fields/Rules_JSON__c.field-meta.xml
<CustomField>
    <fullName>Rules_JSON__c</fullName>
    <label>Rules JSON</label>
    <description>JSON array of branching-rule objects for this question, each shaped as {logic, conditions[], action, target} -- see docs/architecture/gtm-instrument-editor.md for the full schema (logic/operator/action enums) consumed by sub-issue 03's gtmRuleEngine and sub-issue 04's gtmInstrumentAuthor LWC.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>