force-app/main/default/objects/GTM_Instrument_Question__c/fields/Slot_Order__c.field-meta.xml
<CustomField>
    <fullName>Slot_Order__c</fullName>
    <label>Slot Order</label>
    <description>Display/authoring order of this question within its parent instrument. Zero-based or one-based ordinal assigned by the author UI (sub-issue 04); ties are not guaranteed to resolve deterministically.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>